Bug 108324 - Crash in: mergedlo.dll
Summary: Crash in: mergedlo.dll
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: JoNi
URL:
Whiteboard: target:5.5.0 target:5.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-06-03 14:26 UTC by Regina Henschel
Modified: 2017-07-17 15:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments
File to reproduce the crash (12.56 KB, application/vnd.oasis.opendocument.presentation)
2017-06-03 14:26 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-06-03 14:26:53 UTC
Created attachment 133826 [details]
File to reproduce the crash

This bug was filed from the crash reporting server and is br-b32ea8db-d745-4b3a-909e-27663f462e08.
=========================================

Open attached file. It contains a text box with 10 hearts.
Enter the text box and copy the right 5 hearts to the clipboard.
Leave the text box and click on a free area, so that nothing is selected.
Open context menu by right click and click on item "Paste". Crash.

It does not crash, if you use shortcut keys Ctrl+V.

Version: 5.4.0.0.alpha1+
Build ID: 8c0be54a7da6262dffe04357121814dd22b5d7fe
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-05-15_01:35:45
Locale: de-DE (de_DE); Calc: group
Comment 1 Regina Henschel 2017-06-03 14:29:05 UTC
Tried again: ctrl+V crashes as well.
Comment 2 Xisco Faulí 2017-06-03 15:12:21 UTC
Confirmed in

Version: 5.5.0.0.alpha0+
Build ID: 36b1e6270bf2fbb333e2a69c4bb5931eba418289
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-05-29_14:06:19
Locale: es-ES (es_ES); Calc: group

and in

Version: 5.5.0.0.alpha0+
Build ID: 9956849c2ea6049582e2ccf04c355542c1ef00a1
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 Xisco Faulí 2017-06-03 15:26:35 UTC
Regression introduced by:

author	Jochen Nitschke <j.nitschke+logerrit@ok.de>	2017-01-22 12:23:57 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-01-23 07:27:58 (GMT)
commit dd891ec422fb35eada219ca7adddbd60d69f1fb7 (patch)
tree 37d92c4912c16c0e81f19784a538ee03e6fc33d8
parent 38f9082771b7842d056a04965bffd57cb655a558 (diff)
cppcheck: memleak (false positive)
but manage ownership from start

Bisected with bibisect-linux-64-5.4

Adding Cc: to Jochen Nitschke
Comment 4 Commit Notification 2017-06-04 10:48:34 UTC
Jochen Nitschke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=453ce05c3951b6459a6450e6ac09377f70ecbc16

tdf#108324 fix crash: paste from textframe

It will be available in 5.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-06-04 12:20:23 UTC
Jochen Nitschke committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a5f911f04f986d424df5393fb9a2744fdf770f21&h=libreoffice-5-4

tdf#108324 fix crash: paste from textframe

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2017-06-04 12:22:18 UTC
Jochen: since you assigned yourself, let's put this tracker to ASSIGNED.
Comment 7 JoNi 2017-06-04 12:27:13 UTC
thank you, great testing and good reproducer.
should be fixed, please verify and close.

@Julien: thanks, thought status changes automatic when you 'take' an issue
Comment 8 Regina Henschel 2017-07-17 15:56:23 UTC
verified in Version: 6.0.0.0.alpha0+
Build ID: 9f3814af7264ce90685a82cbf4eb015a38f22bf7
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-28_00:47:42
Locale: de-DE (de_DE); Calc: group

and in
Version: 5.4.0.2
Build ID: 2b906d450a44f2bbe506dcd22c51b3fa11dc65fd
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: de-DE (de_DE); Calc: group