tdf#108324 fix crash: paste from textframe

rAttr references *pC->maCharAttribs[nAttr].get() and assignment of
a unique_ptr is essentially a reset, invalidating the reference.

regression of commit	dd891ec422fb35eada219ca7adddbd60d69f1fb7
	cppcheck: memleak (false positive)
	but manage ownership from start

Change-Id: Ica81f0af18e11b32d2f97045961630858c78e9af
Reviewed-on: https://gerrit.libreoffice.org/38382
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jochen Nitschke <j.nitschke+logerrit@ok.de>